2008-01-27  Gil Forcada  <gforcada@gnome.org>

	* compare-releases.py:
	Better wording in error messages (thanks to Claude). Closes #512124.

2008-01-20  Gil Forcada  <gforcada@gnome.org>

	* releases.xml.in:
	Removed duplicate entrys in gnome-2-22 and gnome-extras. Closes #510815.

2008-01-19  Claude Paroz  <claude@2xlibre.net>

	* people.xml.in:
	* translation-teams.xml.in: New Spanish coordinator is now Jorge
	González González.

2008-01-18  Gil Forcada  <gforcada@gnome.org>

	* update-stats.py:
	* data.py:
	only show errors in stderr if defaults.DEBUG is set to 1

2008-01-18  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added jhbuild module for doc translation.

2008-01-18  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Removed gnome-office since it has been moved to
	svn-archive.gnome.org.

2008-01-17  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in: Added a new module: libepc
	* releases.xml.in: Added libepc to gnome-extras release set

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Add SVN browse URL to GNUCash 2.2 branch.

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* data.py: Arghhh... syntax error in previous commit. Sorry!

2008-01-16  Claude Paroz  <claude@2xlibre.net>

	* data.py: Allow URL link in string without parsing it as an XML node.
	* gnome-modules.xml.in: Add GNUCash module.
	* releases.xml.in: gnome-build and gdl were listed twice.
	* templates/module.tmpl: Display the comment attribute when available.

2008-01-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: New gnome-settings-daemon module (splitted from
	gnome-control-center).

2008-01-15  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Use gimp-gap gap-2-4 branch.

2008-01-14  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module mousetweaks.

2008-01-14  Gil Forcada  <gforcada@gnome.org>