@@ -1558,6 +1558,10 @@
   <module id="straw">
     <branch id="HEAD"/>
   </module>
+  <module id="swfdec-gnome">
+     <maintainer id="otte"/>
+     <branch id="HEAD"/>
+  </module>
   <module id="tomboy">
     <branch id="HEAD"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
