@@ -101,6 +101,12 @@
     <email>mclasen@redhat.com</email>
     <nick>mclasen</nick>
   </person>
+  <person id="otte">
+     <name>Benjamin Otte</name>
+     <email>otte@gnome.org</email>
+     <icon>http://planet.gnome.org/heads/company.png</icon>
+     <webpage>http://blogs.gnome.org/otte</webpage>
+  </person>
   <person id="owen">
     <name>Owen Taylor</name>
     <email>otaylor@redhat.com</email>
