@@ -617,6 +617,7 @@
       <module id="orca"/>
       <module id="seahorse"/>
       <module id="sound-juicer"/>
+      <module id="swfdec-gnome"/>
       <module id="tomboy"/>
       <module id="totem"/>
       <module id="totem-pl-parser"/>
