@@ -1,3 +1,9 @@
+2008-01-29  Gil Forcada  <gforcada@gnome.org>
+
+	* gnome-modules.xml.in: Added swfdec-gnome.
+	* releases.xml.in: Added swfdec-gnome to gnome-2-22 moduleset.
+	* people.xml.in: Added Benjamin Otte.
+
 2008-01-27  Gil Forcada  <gforcada@gnome.org>
 
 	* compare-releases.py:
